description = "knn-java-library"

apply plugin: "java"


sourceCompatibility = "1.8"
targetCompatibility = "1.8"

group = "com.github.felipexw"
version = "1.0-SNAPSHOT"

repositories {
    mavenLocal()

    mavenCentral()

    // All things JBoss/Hibernate
    maven {
        name "JBoss"
        url "http://repository.jboss.org/nexus/content/groups/public/"
    }
        

    // For access to Apache Staging (Preview) packages
    maven {
        name "Apache Staging"
        url "https://repository.apache.org/content/groups/staging"
    }
}

// This simulates Maven's "provided" scope, until it is officially supported by Gradle
// See http://jira.codehaus.org/browse/GRADLE-784

configurations {
    provided
}

sourceSets {
    main {
        compileClasspath += [configurations.provided]
        // To give the same path as IDEA has
        // output.resourcesDir = 'build/production/ml-dive'
        // output.classesDir = 'build/production/ml-dive'
    }
    test {
        compileClasspath += [configurations.provided]
        runtimeClasspath += [configurations.provided]
    }
}

dependencies {
    // https://mvnrepository.com/artifact/com.google.truth/truth
    compile group: 'com.google.truth', name: 'truth', version: '0.29'
    compile group: 'com.google.guava', name: 'guava', version: '19.0'

    runtime "log4j:log4j:1.2.17"
    runtime "org.slf4j:slf4j-log4j12:1.7.19"

}

test {
    jvmArgs("-XX:MaxPermSize=256M")

    enableAssertions = true
}

task wrapper(type: Wrapper) {
    gradleVersion = '2.3'
}

// TODO: Configure execution mode for jettyRun task
